@@ -6,3 +6,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 commitHelper;  ) > 0.4.15cvs4.patchset
 ( cvs diff -u -r 1.7.2.20 -r 1.7.2.21 configure.ac;  ) > 0.4.15cvs5.patchset
 ( cvs diff -u -r 1.7.2.19 -r 1.7.2.20 ChangeLog;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 README;  cvs diff -u -r 1.7.2.22 -r 1.7.2.23 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/README.Debian;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 debian/changelog;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 debian/control;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/copyright;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/rules;  cvs diff -u -r 1.2.2.6 -r 1.2.2.7 src/Makefile.am;  cvs diff -u -r 1.4.2.9 -r 1.4.2.10 src/fetchinfo_plugin.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/fetchinfo_plugin.h;  cvs diff -u -r 1.3.2.8 -r 1.3.2.9 src/fetchinfo_plugin_gtk.c;  ) > 0.4.16cvs1.patchset
+( cvs diff -u -r 1.2.2.7 -r 1.2.2.8 src/Makefile.am;  cvs diff -u -r 1.4.2.10 -r 1.4.2.11 src/fetchinfo_plugin.c;  cvs diff -u -r 1.3.2.9 -r 1.3.2.10 src/fetchinfo_plugin_gtk.c;  ) > 0.4.16cvs2.patchset
